# modules/common-services/common-services-impl/rest-openapi.yaml
@@ -4,8 +4,8 @@ info:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
   title: "Arena Common Services"
-  version: v1.0
-openapi: 3.0.3
+  version: v5.7
+openapi: 3.0.4
 components:
   schemas:
     GroupConfig:
@@ -78,7 +78,8 @@ paths:
           content:
             application/json:
               schema:
-                  $ref: "#/components/schemas/GroupConfig"
+                type: object
             application/xml:
               schema:
-                  $ref: "#/components/schemas/GroupConfig"
+                type: object
+
